<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"

            android:src="@drawable/apple"
            cardView:layout_constraintBottom_toTopOf="@+id/card_postre"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_fecha_carga"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            android:textStyle="bold"
            cardView:layout_constraintBottom_toTopOf="@id/card_fecha_comida"
            cardView:layout_constraintLeft_toRightOf="@id/image"
            cardView:layout_constraintRight_toRightOf="parent"
            cardView:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/card_fecha_comida"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            cardView:layout_constraintHorizontal_bias="1.0"
            cardView:layout_constraintLeft_toRightOf="@id/image"
            cardView:layout_constraintRight_toRightOf="parent"
            cardView:layout_constraintTop_toBottomOf="@id/card_fecha_carga"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/card_principal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            cardView:layout_constraintBottom_toTopOf="@id/card_tento"
            cardView:layout_constraintLeft_toRightOf="@id/image"
            cardView:layout_constraintRight_toRightOf="parent"
            cardView:layout_constraintTop_toBottomOf="@id/card_fecha_comida"
            tools:text="@tools:sample/lorem" />


        <CheckBox
            android:id="@+id/card_postre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            android:hint="@string/card_c_postre"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toStartOf="@+id/card_tento"
            cardView:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/card_tento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/card_t_tent"
            android:clickable="false"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toStartOf="@+id/card_hambriento"
            cardView:layout_constraintStart_toEndOf="@id/card_postre" />

        <CheckBox
            android:id="@+id/card_hambriento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="false"
            android:hint="@string/card_c_hambre"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toEndOf="parent"
            cardView:layout_constraintStart_toEndOf="@id/card_tento"
            cardView:layout_constraintTop_toBottomOf="@+id/card_principal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>